2004-09-29  Hans Petter Jansson  <hpj@ximian.com>

	Fixes bug #66369.

	* util/eab-book-util.c (eab_contact_list_from_string): Make the
	vcard splitter work with any amount of blank lines between vcards.

2004-09-29  Hans Petter Jansson  <hpj@ximian.com>

	Fixes bug #65537.

	* gui/merging/eab-contact-compare.c (query_cb): Protect against NULL
	UIDs, and make fewer calls to e_contact_get_const () as a bonus.

2004-09-23  Fazlu & Hannah <hannah_lins@yahoo.co.in>

	Fixes bug #61070

	* addressbook/tools/evolution-addressbook-export.c (main):
	Changed the string into proper grammar 'In normal mode,
	there should not need size option.' to 'In normal mode, there
	is no need for the size option.'

2004-09-23  JP Rosevear  <jpr@novell.com>

	* conduit/address-conduit.c (ecard_from_remote_record): only set
	the file as address to the company if no full name exists
	(delete_record): don't bail out if the record simply isn't found

	Fixes #59725
	
	* conduit/address-conduit.c (local_record_from_uid): remove
	extraneous semicolon

2004-09-13  Rodney Dawes  <dobey@novell.com>

	* gui/contact-editor/e-contact-editor.c (show_help_cb):
	Point at the correct XML file for documentation

2004-09-09  Sivaiah Nallagatla  <snallagatla@novell.com>

	Part of fix for #59582.

	* gui/contact-editor/e-contact-editor.c 
	(sensitize_address): check for _LABEL type address fields also in
	supported fileds while sensitizing the address fields.

2004-09-08  Not Zed  <NotZed@Ximian.com>

	** See bug #64080.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	link addressbook to camel.

2004-09-13  Rodney Dawes  <dobey@novell.com>

	* gui/contact-editor/e-contact-editor.c (show_help_cb):
	Point at the correct XML file for documentation

2004-09-13 Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/contact-editor/e-contact-editor.c
       (sensitize_address) : check for _LABEL
       type address fields also in supported fileds
       while sensitizing the address fields
